--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <p class="instructions-hide">DRAG to rearrange items.</p>
 </div>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
